--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -89,32 +89,43 @@ section {
 
 
  /* slide */
+ .header {
+    height: 100vh;
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+
+
+    position: relative;
+}
+.header .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(44, 62, 80, 0.7);
+    text-align: center;
+}
+
+
  .slide {
      min-height: 100vh;
      display: flex;
      align-items: center;
      justify-content: center;
-     position: relative;
 }
 
-.slide1 {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg_banner2.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
 
-.slide2 {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg_banner1.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+
+
 
 .slide .display-3 {
     text-transform: uppercase;
     color: #fff;
 }
+
+
 
 /* navbar */
 .top-nav {
@@ -163,9 +174,11 @@ section {
    margin: 0 10px;
 }
 
-
+.navbar{
+background-color: #2c3e50;
+}
 .navbar .navbar-nav .nav-link {
-    color: var(--dark);
+    color: #fff;
 }
 
 .navbar .navbar-nav .nav-link:hover {
@@ -179,6 +192,10 @@ section {
 .navbar-brand {
     font-size: 28px;
     font-weight: 700;
+}
+
+.navbar-brand img {
+  width: 100px;
 }
 
 .navbar-brand .dot {
@@ -212,6 +229,8 @@ text-align: center;}
     font-weight: 400;
     text-transform: uppercase;
 }
+
+
 
 .intro h1 {
     margin-top: 15px;
