--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -461,7 +461,7 @@ text-align: center;}
     text-transform: uppercase;
     color: var(--brand);
     text-decoration: underline;
-    color: rgb(15, 37, 87) 6% 66%);
+    color: rgb(15, 37, 87) 6% 66%;
 }
 
 footer {
@@ -532,3 +532,120 @@ input.form-control {
     100% {
       transform: translateY(0rem);
     }}
+
+
+
+  .avatar-wrapper {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+  }
+  .avatar-wrapper .avatar-dropdown-arrow {
+    transition: opacity 0.1s linear, transform 0.15s linear;
+  }
+  .avatar-wrapper .avatar-dropdown-arrow.active {
+    transform: rotate(180deg);
+  }
+  .avatar-wrapper:hover .avatar-dropdown-arrow {
+    opacity: 0.2;
+  }
+
+  .avatar-photo {
+    border-radius: 50%;
+
+}
+
+  .dropdown-wrapper {
+    position: absolute;
+    transform: scale(0.8);
+    transform-origin: top;
+    /* transform-origin: right; */
+    right: 25px;
+    top: 65px !important;
+    z-index: 4;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    margin-top: 0.5rem;
+    padding: 1.5rem;
+    background-color: #fff;
+    box-shadow: 0 0 0 1px rgba(50, 50, 93, 0.08), 0 2px 4px 0 rgba(50, 50, 93, 0.05), 0 4px 8px 0 rgba(136, 152, 170, 0.08);
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    opacity: 0;
+    visibility: hidden;
+  }
+  .dropdown-wrapper.active {
+    top: 100%;
+    transform: scale(1);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .dropdown-profile-details {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid #eaeaea;
+    /* justify-content: center; */
+    /* margin: auto; */
+    text-align: center;
+  }
+  .dropdown-profile-details img{
+    margin: auto;
+    height: 80px;
+    width: 80px;
+  }
+  .dropdown-profile-details--name {
+    /* font-size: 1.75rem; */
+    margin-bottom: 0;
+    font-weight: 600;
+  }
+
+  .dropdown-profile-details--email {
+    /* font-size: 1.2rem; */
+    color: #6f6f6f;
+  }
+
+  .dropdown-links {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1.5rem;
+  }
+  .dropdown-links a {
+    color: #525f7f;
+    text-decoration: none;
+    padding-bottom: 1rem;
+    transition: all 0.1s linear;
+  }
+  .dropdown-links a:hover {
+    color: #E44D42;
+  }
+  .dropdown-links a:last-of-type {
+    padding-bottom: 0;
+  }
+
+
+
+  .img-student{
+    width: 80px;
+    height: 80px;
+    border-radius: 3px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    margin: auto;
+    }
+.img-student-logo{
+    width: 28px;
+    height: 28px;
+    border-radius: 50%  !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    -webkit-border-radius: 50%  !important;
+    -moz-border-radius: 50%  !important;
+    -ms-border-radius: 50%  !important;
+    -o-border-radius: 50%  !important;
+}
+
