--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
     /* #2A3166 , #01345B, #252669*/
-    --brand: #0F2557;
+    --brand: #1a2e44;
     --dark: #092032;
     --body: #516171;
     --border: rgba(0,0,0,0.08);
@@ -105,7 +105,7 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(44, 62, 80, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
 
@@ -177,15 +177,15 @@ section {
 }
 
 .navbar .navbar-nav .nav-link {
-    color: rgba(204, 204, 204, 0.664);
+    color: #fff;
 }
 
 .navbar .navbar-nav .nav-link:hover {
-    color: #FBEAEB;
+    color: #E44D42;
 }
 
 .navbar .navbar-nav .nav-link.active {
-    color: #FBEAEB;
+    color: #E44D42;
 }
 
 .navbar-brand {
@@ -247,8 +247,9 @@ text-align: center;}
 }
 
 
+
 #milestone {
-    background: linear-gradient(rgba(30, 39, 97, 0.897), rgba(30, 39, 97, 0.541)), url(../img/bg_banner1.jpg);
+    background: linear-gradient( rgba(59, 76, 93, 0.795), rgba(59, 76, 93, 0.795)), url(../img/bg_banner1.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -465,7 +466,7 @@ text-align: center;}
 }
 
 footer {
-    background: linear-gradient(0deg, rgba(15, 37, 87, 0.9), rgba(15, 37, 87, 0.9)), url(../img/bg_banner1.jpg), #082032;;
+    background: linear-gradient(0deg, rgba(26, 46, 68, 0.85), rgba(26, 46, 68, 0.85)), url(../img/bg_banner1.jpg), #082032;;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -649,3 +650,154 @@ input.form-control {
     -o-border-radius: 50%  !important;
 }
 
+
+
+.kt-avatar {
+    position: relative;
+    display: inline-block;
+    }
+    .kt-avatar .kt-avatar__holder {
+      width: 120px;
+      height: 120px;
+      border-radius: 3px;
+      background-repeat: no-repeat;
+      background-size: cover; }
+    .kt-avatar .kt-avatar__upload {
+      cursor: pointer;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      position: absolute;
+      right: -10px;
+      top: -10px;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: #ffffff;
+      -webkit-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.1);
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s; }
+      .kt-avatar .kt-avatar__upload input {
+        width: 0 !important;
+        height: 0 !important;
+        overflow: hidden;
+        opacity: 0; }
+      .kt-avatar .kt-avatar__upload i {
+        color: #5d78ff;
+        font-size: 0.9rem; }
+      .kt-avatar .kt-avatar__upload:hover {
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+        background-color: #5d78ff; }
+        .kt-avatar .kt-avatar__upload:hover i {
+          color: #ffffff; }
+    .kt-avatar .kt-avatar__cancel {
+      cursor: pointer;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      position: absolute;
+      top: auto;
+      right: -10px;
+      bottom: -5px;
+      width: 22px;
+      height: 22px;
+      border-radius: 50%;
+      background-color: #ffffff;
+      -webkit-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.1);
+      display: none; }
+      .kt-avatar .kt-avatar__cancel i {
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+        color: #74788d;
+        font-size: 0.9rem; }
+      .kt-avatar .kt-avatar__cancel:hover i {
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+        color: #5d78ff; }
+    .kt-avatar.kt-avatar--changed .kt-avatar__cancel {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+    .kt-avatar.kt-avatar--brand .kt-avatar__upload i {
+      color: #5d78ff; }
+    .kt-avatar.kt-avatar--brand .kt-avatar__upload:hover {
+      background-color: #5d78ff; }
+      .kt-avatar.kt-avatar--brand .kt-avatar__upload:hover i {
+        color: #ffffff; }
+    .kt-avatar.kt-avatar--light .kt-avatar__upload i {
+      color: #ffffff; }
+    .kt-avatar.kt-avatar--light .kt-avatar__upload:hover {
+      background-color: #ffffff; }
+      .kt-avatar.kt-avatar--light .kt-avatar__upload:hover i {
+        color: #282a3c; }
+    .kt-avatar.kt-avatar--dark .kt-avatar__upload i {
+      color: #282a3c; }
+    .kt-avatar.kt-avatar--dark .kt-avatar__upload:hover {
+      background-color: #282a3c; }
+      .kt-avatar.kt-avatar--dark .kt-avatar__upload:hover i {
+        color: #ffffff; }
+    .kt-avatar.kt-avatar--primary .kt-avatar__upload i {
+      color: #5867dd; }
+    .kt-avatar.kt-avatar--primary .kt-avatar__upload:hover {
+      background-color: #5867dd; }
+      .kt-avatar.kt-avatar--primary .kt-avatar__upload:hover i {
+        color: #ffffff; }
+    .kt-avatar.kt-avatar--success .kt-avatar__upload i {
+      color: #0abb87; }
+    .kt-avatar.kt-avatar--success .kt-avatar__upload:hover {
+      background-color: #0abb87; }
+      .kt-avatar.kt-avatar--success .kt-avatar__upload:hover i {
+        color: #ffffff; }
+    .kt-avatar.kt-avatar--info .kt-avatar__upload i {
+      color: #5578eb; }
+    .kt-avatar.kt-avatar--info .kt-avatar__upload:hover {
+      background-color: #5578eb; }
+      .kt-avatar.kt-avatar--info .kt-avatar__upload:hover i {
+        color: #ffffff; }
+    .kt-avatar.kt-avatar--warning .kt-avatar__upload i {
+      color: #ffb822; }
+    .kt-avatar.kt-avatar--warning .kt-avatar__upload:hover {
+      background-color: #ffb822; }
+      .kt-avatar.kt-avatar--warning .kt-avatar__upload:hover i {
+        color: #111111; }
+    .kt-avatar.kt-avatar--danger .kt-avatar__upload i {
+      color: #fd397a; }
+    .kt-avatar.kt-avatar--danger .kt-avatar__upload:hover {
+      background-color: #fd397a; }
+      .kt-avatar.kt-avatar--danger .kt-avatar__upload:hover i {
+        color: #ffffff; }
+    .kt-avatar.kt-avatar--circle .kt-avatar__holder {
+      border-radius: 50%; }
+    .kt-avatar.kt-avatar--circle .kt-avatar__upload {
+      right: 0px;
+      top: 5px; }
+    .kt-avatar.kt-avatar--circle .kt-avatar__cancel {
+      right: 3px;
+      bottom: 10px; }
+    .kt-avatar.kt-avatar--outline .kt-avatar__holder {
+      border: 3px solid #ffffff;
+      -webkit-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.1); }
+
+      .profile-img-modal{
+        width: 400px;
+        height: 400px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin: auto;
+
+    }
+
+    
