--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -134,10 +134,7 @@ section {
     top: 42px !important;
   }
 
-.notify-msg-drop{
-    top: 54px !important;
 
-}
   .wp-content {
     margin-top: 60px;
     margin-left: 75px;
@@ -262,8 +259,8 @@ section {
     gap: 15px;
   }
   .media img {
-      width: 50px !important;
-      height: 50px !important;
+      width: 27px !important;
+      height: 27px !important;
       object-fit: cover !important;
   }
   .dropdown-item-title {
@@ -475,6 +472,16 @@ section {
     top: 20px;
   }
 
+  .list-group-item {
+    display: block;
+  }
+  .list-group-item .main-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+
  /* slide */
  .header {
     height: 100vh;
@@ -604,14 +611,35 @@ section {
     -o-border-radius: 2px;
     transition: all 0.4s ease;
 }
-
 .btn-brand:hover {
-    background-color: #d64022;
-    border-color: #d64022;
-    color: #fff;
-    text-decoration: none;
+  background-color: #d64022;
+  border-color: #d64022;
+  color: #fff;
+  text-decoration: none;
 
 }
+
+.btn-seconed-brand{
+    background-color: #d64022;
+    padding: 10px 12px ;
+    border-radius: 2px;
+    text-decoration: none;
+    color: #fff;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    transition: all 0.4s ease;
+}
+.btn-seconed-brand:hover {
+  background-color: var(--brand);
+  border-color: #d64022;
+  color: #fff;
+  text-decoration: none;
+
+}
+
+
 
 .intro {margin-bottom: 36px;
 text-align: center;}
