upload tas kfile

--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -932,6 +932,7 @@ footer .footer-top {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     padding-bottom: 20px;
     padding-top: 20px;
+    color: #fff;
 }
 
 footer .navbar-brand {
