--- a/public/adminAssets/loginAssets/assets/css/style.css
+++ b/public/adminAssets/loginAssets/assets/css/style.css
@@ -235,6 +235,9 @@ ol {
   margin: 0;
   list-style: none;
 }
+.btn-web{
+    text-align: right;;
+}
 
 .btn {
   display: inline-block;
@@ -250,8 +253,8 @@ ol {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  padding: 8px 32px;
+    font-size: 1rem;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -485,6 +488,95 @@ img {
   content: '\f070';
 }
 
+.bg .overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(2px);
+}
+input.error {
+    border: 1px solid #dc3545;
+}
+small {
+    color: #dc3545;
+    text-align: right;
+    display: block;
+    margin: 6px 0 0 0;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    border: 1px solid;
+    border-color: #f5c2c7;
+    color: #842029;
+    padding: 15px;
+    border-radius: 6px;
+    margin-bottom: 20px;
+
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border: 1px solid;
+    border-color: #c3e6cb;
+    padding: 15px;
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
+.alert-warning {
+    color: #856404;
+    background-color: #fff3cd;
+    border: 1px solid;
+    border-color: #ffeeba;
+    padding: 15px;
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
+
+.dropdown {
+position: relative;
+display: inline-block;
+}
+.dropdown span{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 5px;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 115px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+padding: 12px 16px;
+z-index: 1;
+text-align: center;
+right: 0 ;
+}
+
+.dropdown-content a{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 5px;
+
+}
+
+.dropdown:hover .dropdown-content {
+/* display: block; */
+display: flex;
+flex-direction: column;
+gap:10px
+}
+
+img.image-lang{
+width: 25px
+}
 
 @media (min-width: 991px) and (max-width: 1200px) {
   .signin-form {
