--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -261,7 +261,7 @@ section {
     object-fit: cover;
   }
   [data-component=navbar] .list-group .lg {
-    max-height: 420px;
+    max-height: 480px;
     width: 270px;
     overflow: auto;
   }
@@ -686,7 +686,7 @@ section {
     transition: all 0.4s ease;
 }
 .btn-seconed-brand:hover {
-  background-color: var(--brand);
+  background-color: #ff4d29;
   border-color: #d64022;
   color: #fff;
   text-decoration: none;
