--- a/public/websiteAssets/css/style.css
+++ b/public/websiteAssets/css/style.css
@@ -124,9 +124,11 @@ section {
     background-repeat: no-repeat;
 }
 
-.slide .display-3 {
+.slide .display-5 {
     text-transform: uppercase;
     color: #fff;
+    font-weight: 600;
+    /* line-height: 1.5; */
 }
 
 /* navbar */
@@ -242,7 +244,8 @@ text-align: center;}
 
 
 #milestone {
-    background: linear-gradient(rgba(255, 77, 41, 0.85), rgba(255, 77, 41, 0.85)), url(../img/bg_banner1.jpg);
+    background:   linear-gradient(-90deg, rgba(8, 32, 50, 0.8), rgba(8, 32, 50, 0.8)), url(../img/bg_banner1.jpg);
+    /* background: linear-gradient(rgba(255, 77, 41, 0.85), rgba(255, 77, 41, 0.85)), url(../img/bg_banner1.jpg); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -333,7 +336,7 @@ text-align: center;}
     position: absolute;
     left: 0;
     top: -10%;
-    background-color: rgba(255, 77, 41, 0.7);
+    background-color:  rgba(8, 32, 50, 0.7);
     opacity: 0;
     transition: all 0.4s ease;
 }
