--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -251,8 +251,9 @@ section {
     position: absolute;
     width: 15px;
     height: 15px;
-    top: -8px;
-    right: -3px;
+    line-height: 14px;
+    top: -4px;
+    right: -1px;
     background-color: red;
     border-radius: 50%;
     text-align: center;
@@ -2013,3 +2014,127 @@ input.form-control {
             display: block;
             width: 76px;
           }
+
+          /* all companies */
+
+        #categories_wrapper {
+            min-height: 400px;
+        }
+
+        #companies_dropdown{
+            background: #333;
+            border: 1px solid rgba(0,0,0,.15);
+            border-radius: 0.25rem;
+            /* border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0; */
+            background-color: #fff;
+            box-shadow: 0px 30px 30px 6px rgba(0, 0, 0, 0.2);
+            border-color: transparent;
+            position: absolute;
+            padding: 0;
+            top: 46px;
+            left: 0;
+            width: 100%;
+            z-index: 999;
+        }
+
+        #dropdown_item {
+            display: inline-block;
+            width: 100%;
+            padding: 10px;
+            cursor: pointer;
+        }
+        #dropdown_item:hover {
+            background-color: rgb(222, 225, 230) !important;
+        }
+        .input-box {
+            position: relative;
+            width: 100%;
+            max-width: 53px;
+            height: 44px;
+            margin: 0 50px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            border-radius: 6px;
+            transition: all 0.5s ease-in-out;
+            display: flex;
+            justify-content: center;
+        }
+        .input-box.open {
+            max-width: 350px;
+        }
+        .input-box input {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            font-size: 16px;
+            font-weight: 400;
+            color: #333;
+            background-color: #fff;
+            padding: 0 15px;
+            border: none;
+            border-radius: 6px;
+            outline: none;
+            transition: all 0.5s ease-in-out;
+        }
+
+        .input-box #clear_input {
+            position: absolute;
+            right: 12px;
+            top: 15px;
+            cursor: pointer;
+        }
+
+        .input-box #clear_input.hide {
+          display: none;
+        }
+        .input-box.open input {
+            padding: 0 15px 0 65px;
+        }
+
+        .input-box .search {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            max-width: 53px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+        .input-box.open .search {
+            border-radius: 6px 0 0 6px;
+        }
+        .search .search-icon {
+            font-size: 21px;
+            font-weight: lighter;
+            color: #1c1c1c;
+        }
+        .input-box .close-icon {
+            position: absolute;
+            top: 50%;
+            right: -45px;
+            font-size: 26px;
+            font-weight: lighter;
+            color: #1c1c1c;
+            padding: 5px;
+            transform: translateY(-50%);
+            transition: all 0.5s ease-in-out;
+            cursor: pointer;
+            pointer-events: none;
+            opacity: 0;
+        }
+        .input-box.open .close-icon {
+            transform: translateY(-50%) rotate(180deg);
+            pointer-events: auto;
+            opacity: 1;
+        }
+        .search_wrapper {
+            display: flex;
+            justify-content: center;
+        }
+
