--- a/public/adminAssets/loginAssets/assets/css/style.css
+++ b/public/adminAssets/loginAssets/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
+
 /* Typography */
 :root {
   --mainColor: #1a2e44;
@@ -14,7 +16,7 @@
 body ,
 input , select , h3 , h2 , h1 , h4 , h5 ,
 .btn{
-    font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-family: 'Cairo', sans-serif;
 }
 body {
     font-weight: 500;
