--- a/public/studentAssets/css/style.css
+++ b/public/studentAssets/css/style.css
@@ -2194,7 +2194,7 @@ body .dribbble img {
     overflow: hidden;
 }
 
-.ftms {
+/* .ftms {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -2204,7 +2204,7 @@ body .dribbble img {
     font-weight: bold;
     z-index: 2000;
     color: #d64022;
-}
+} */
 
 .advert-box{
     background: #00000014;
@@ -2587,5 +2587,84 @@ body .dribbble img {
 @media (min-width: 991px) {
     .empty-task {
         width: 580px;
+    }
+}
+/* Loader */
+
+.loader {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background-color: #fff;
+    z-index: 1056;
+}
+
+.loader .b {
+    border-radius: 50%;
+    border-left: 4px solid;
+    border-right: 4px solid;
+    border-top: 4px solid transparent !important;
+    border-bottom: 4px solid transparent !important;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ro 2s infinite;
+}
+
+.loader .b1 {
+    border-color: #4a69bd;
+    width: 120px;
+    height: 120px;
+}
+
+.loader .b2 {
+    border-color: #1a2e44;
+    width: 100px;
+    height: 100px;
+    animation-delay: 0.2s;
+}
+
+.loader .b3 {
+    border-color: #516171;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0.4s;
+}
+
+.loader .b4 {
+    border-color: #34495e;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0.6s;
+}
+
+.ftms {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 17px;
+    font-weight: 600 !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    z-index: 2000;
+    color: #d64022;
+}
+
+@keyframes ro {
+    0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+    50% {
+        transform: translate(-50%, -50%) rotate(-180deg);
+    }
+
+    100% {
+        transform: translate(-50%, -50%) rotate(0deg);
     }
 }
